Fix wrong size of background image on videoButton
Restricted scope of change to `.videoButton.dungeon` and changed it to
`cover` which better suits the intended change.

This change was to accomodate the larger dungeon loading screen images
added in 492acbd

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -229,13 +229,16 @@ h2 {
   -webkit-text-stroke: 0.5px black;
   -webkit-text-fill-color: white;
   font: bold 18px Arial Narrow;
-  background-size: contain;
   text-shadow:
     1px  1px 0 #000,
    -1px -1px 0 #000,
     1px -1px 0 #000,
    -1px  1px 0 #000,
     1px  1px 0 #000;
+}
+
+.videoButton.dungeon {
+  background-size: cover;
 }
 
 /* .sepulcherRaid{
